--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta charset="UTF-8">
-   <meta name="apple-mobile-web-app-capable" content="yes"/>
-   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-   <meta name="apple-mobile-web-app-title" content="Socializr"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+    <meta name="apple-mobile-web-app-title" content="Socializr"/>
+    <meta name="format-detection" content="telephone=no">
+    
+    <!-- iPhoneX -->
+    <link href="dist/img/apple-launch-1125x2436.png" rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)">
+    <!-- iPhone 8, 7, 6s, 6 -->
+    <link href="dist/img/apple-launch-750x1334.png" rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)">
+    <!-- iPhone 8 Plus, 7 Plus, 6s Plus, 6 Plus -->
+    <link href="dist/img/apple-launch-1242x2208.png" rel="apple-touch-startup-image" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3)">
 
-   <link rel="apple-touch-icon" href="favicon.ico"/>
-   <link rel="apple-touch-startup-image" href="social-bg.png">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+     <link rel="apple-touch-icon" href="favicon.ico"/>
+     <link rel="apple-touch-startup-image" href="social-bg.png">
+     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -29,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>SOCIAL TATAKAI</title>
   </head>
   <body>
     <noscript>
@@ -50,6 +59,5 @@
     <script>
     addToHomescreen();
     </script>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/csshake/1.5.3/csshake-default.min.css">
   </body>
 </html>
